@@ -1,3 +1,8 @@
+drkns 28.11.2016 17:01:39 +0200 - build 4860
+
+1. С форума: постоянные блоки, редактор, строка длиннее ширины экрана
+   переходим в конец строки (происходит горизонтальный скрол экрана), выделяем небольшую подстроку, нажимаем Home, Far молча схлопывается
+
 drkns 27.11.2016 11:48:40 +0200 - build 4859
 
 1. При смене диска мышью не всегда устанавливался текущий каталог панели.
